--- a/groth1alt.tex
+++ b/groth1alt.tex
@@ -9590,7 +9590,7 @@ which}\\\text{are \textquotedblleft ignored\textquotedblright}}%
 },\underbrace{i+1,i+1,\ldots,i+1}_{\substack{s\text{ many }\left(  i+1\right)
 \text{'s which}\\\text{are not \textquotedblleft ignored\textquotedblright}%
 }},\underbrace{i+1,i+1,\ldots,i+1}_{\substack{b\text{ many }\left(
-i+1\right)  \text{'s which}\\\text{are not \textquotedblleft
+i+1\right)  \text{'s which}\\\text{are \textquotedblleft
 ignored\textquotedblright}}}\right)
 \]
 for some $a,r,s,b\in\mathbb{N}$. Now, we change this substring into%
@@ -9602,7 +9602,7 @@ which}\\\text{are \textquotedblleft ignored\textquotedblright}}%
 },\underbrace{i+1,i+1,\ldots,i+1}_{\substack{r\text{ many }\left(  i+1\right)
 \text{'s which}\\\text{are not \textquotedblleft ignored\textquotedblright}%
 }},\underbrace{i+1,i+1,\ldots,i+1}_{\substack{b\text{ many }\left(
-i+1\right)  \text{'s which}\\\text{are not \textquotedblleft
+i+1\right)  \text{'s which}\\\text{are \textquotedblleft
 ignored\textquotedblright}}}\right)  .
 \]
 And we do this for every $k\in\mathbb{N}_{+}$ (simultaneously or consecutively
@@ -9648,8 +9648,8 @@ looks as follows:%
 _{\substack{2\text{ many }2\text{'s which}\\\text{are not \textquotedblleft
 ignored\textquotedblright}}},\underbrace{3}_{\substack{1\text{ many }3\text{'s
 which}\\\text{are not \textquotedblleft ignored\textquotedblright}%
-}},\underbrace{3}_{\substack{2\text{ many }3\text{'s which}\\\text{are not
-\textquotedblleft ignored\textquotedblright}}}\right)  .
+}},\underbrace{3}_{\substack{2\text{ many }3\text{'s which}\\
+\text{are \textquotedblleft ignored\textquotedblright}}}\right)  .
 \]
 So we change it into%
 \[
@@ -9658,8 +9658,8 @@ So we change it into%
 _{\substack{1\text{ many }2\text{'s which}\\\text{are not \textquotedblleft
 ignored\textquotedblright}}},\underbrace{3,3}_{\substack{2\text{ many
 }3\text{'s which}\\\text{are not \textquotedblleft ignored\textquotedblright}%
-}},\underbrace{3}_{\substack{2\text{ many }3\text{'s which}\\\text{are not
-\textquotedblleft ignored\textquotedblright}}}\right)  .
+}},\underbrace{3}_{\substack{2\text{ many }3\text{'s which}\\
+\text{are \textquotedblleft ignored\textquotedblright}}}\right)  .
 \]
 Similarly, we change the substring $\left(  2,2\right)  $ of the $1$-st row of
 $T$ into $\left(  2,3\right)  $ (because its first $2$ is \textquotedblleft
@@ -9971,8 +9971,8 @@ proof of Proposition \ref{prop.BK=BK}.
 \end{proof}
 
 \begin{todo}
-Can you follow the above argument? (Preferrably at 3AM and/or under the
-influence.)
+The above argument is a mess, whose level of detail doesn't make it more
+readable.
 \end{todo}
 
 
