--- a/groth1.tex
+++ b/groth1.tex
@@ -309,6 +309,7 @@ also known as the \textit{matrix notation}).
 What is the easiest place to refer the reader to for Young diagram basics,
 which uses notations compatible with ours (such as "filling" and "skew
 partition")?
+%[PG] Fulton's book is pretty good for that. English notation, ``filling'', and so on. Although he uses ``skew diagram'' instead of ``skew partition'', but that's probably not that important.
 \end{todo}
 
 A \textit{skew partition} $\lambda/\mu$ is a pair $\left(\lambda, \mu\right)$ of partitions satisfying $\mu\subseteq\lambda$ (as subsets of the plane). In this case, we shall also often use the notation $\lambda/\mu$ for the set-theoretic difference of $\lambda$ and $\mu$.
