--- a/groth1.tex
+++ b/groth1.tex
@@ -219,6 +219,7 @@ Bender-Knuth involutions to reverse plane partitions.
 \begin{todo}
 Pavel: advertise your section here? It sort-of gives some justification for
 why the $t_{i}$ are a natural thing to consider too.
+[PG] I'm not sure what to write here so that it does not intersect with the end of the next paragraph.
 \end{todo}
 
 The present paper is organized as follows: In Section \ref{sect.notations}, we
@@ -231,7 +232,7 @@ existence of an involution with certain properties). In Section
 \ref{sect.proof}, we prove our main result by constructing the required
 involution. In Section \ref{sect.BKclassical}, we
 recapitulate the definition of the classical Bender-Knuth involution, and
-sketch the proof that our involution is a generalization of the latter.
+sketch the proof that our involution is a generalization of the latter. Finally, in Section \ref{sect.structure} we give an explicit formula for $\g_\lm(x_1,x_2,0,0,\dots;\t)$ which shows that the map that we constructed in Section \ref{sect.def} is the unique involution that shares certain natural properties with the classical Bender-Knuth involutions.
 
 \begin{todo}
 Pavel: your last section should also be summarized here.
